# Concurrency-in-C

./: CMakeLists.txt  README.md  concurrency  main.c  make.txt
common/: fifo_queue.c  fifo_queue.h  time.h
concurrency.dSYM/Contents/Resources/DWARF/: concurrency
include/common/: fifo_queue.h
include/threads/: generic_runner.h  generic_thread.h  generic_threads_manager.h
include/threads/thread_pool/: task_queue.h
outputs/: Concurrency.cbp  Makefile  cmake_install.cmake
outputs/debug/lib/: libconcurrency.dylib
outputs/lib/apple/: libconcurrency.dylib
src/: main.c
src/common/: fifo_queue.c  time.c
src/threads/: generic_runner.c  generic_thread.c  generic_threads_manager.c
src/threads/thread_pool/: task_queue.c  thread_pool.c
test/: test_fifo_queue.c  test_fifo_queue.h  test_task_queue.c  test_task_queue.h  test_thread_pool.c  test_thread_pool.h  test_threads_manager.c
threads/: generic_runner.c  generic_runner.h  generic_thread.c  generic_threads_manager.c  generic_threads_manager.h
threads/thread_pool/: task_queue.c  task_queue.h  thread_pool.c  thread_pool.h
